added endpoint for getting user info
